aws_petClinic_region_2/security_group_alb.tf
resource "aws_security_group" "alb_security_group" {
    name = "ec2/alb security group"
    description = "enable http and https access on port 80,443"
    vpc_id = aws_vpc.myvpc.id 

    ingress {
        description = "http access"
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        description = "http access"
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

     egress {
    from_port        = 0
    to_port          = 0
    protocol         = -1
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "ec2/alb security group"
  }

}
